@@ -487,6 +487,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7408: Fixed distutils.tests.sdist so it doesn't check for group
+  ownership when the group is not forced, because the group may be different
+  from the user's group and inherit from its container when the test is run.
+
 - Issue #1515: Enable use of deepcopy() with instance methods.  Patch by
   Robert Collins.
 
